Changes for 2.0.9rc1

New features:
A.F....... [ZBX-1357] updated Chinese (China), Lithuanian and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-6923] fixed mass delete in template list, 'Delete selected' and 'Delete selected with linked elements' functions (Vitalij)
..F....... [ZBX-6922] fixed host interface importing (Eduard)
.......P.. [ZBX-6249] fixed data loss in proxy "Data sender" process caused by unfinished transactions; thanks to MATSUDA Daiki for patch (Andris)
...G...... [ZBXNEXT-1056] improved active checks error messages (wiper)

--------------------------------------------------------------------------------
Changes for 2.0.8

2.0.8rc2 was released as 2.0.8 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.8rc2

Bug fixes:
........S. [ZBX-6889] fixed processing of availability data by the server (Sasha)

--------------------------------------------------------------------------------
Changes for 2.0.8rc1

New features:
...G...PS. [ZBXNEXT-1405] added IP to the warning about ignored messages because of their size (wiper)
A.F....... [ZBX-1357] updated Dutch translation; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-6020] fixed displaying MySQL errors for PHP 5.5.0 and newer (Ivo)
.......PS. [ZBX-6746] fixed template linking to proxy if the agent with the same name is auto-registered (igors)
..F....... [ZBX-6840] fixed undefined indexes for triggers in Monitoring > Maps and Dashboard (Ivo)
...G...... [ZBX-6672] fixed windows agent performance counters being capped to 100 (wiper)
....I..... [ZBX-6831] fixed webtest item conversion in 1.8->2.0 database upgrade patch for mysql (wiper)
...G...... [ZBX-6527] fixed proc.mem calculations with getprocs() for AIX (wiper)
........S. [ZBX-5924] fixed curl verify host option setting in ez texting (wiper)